# mastercode-io_scaflog-zoho-mcp-server

./: .gitignore  pyproject.toml
src/: auth.py  config.py  models.py  server.py  service.py
src/scaflog_zoho_mcp_server/: server.py
tests/: conftest.py  test_server.py  test_service.py
